<resources>
    <string name="app_name">Seasy</string>
    <!-- Strings related to login -->
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="register">Register</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_password_not_match">Password not match</string>

    <string name="login_success">Hi, {0}. You login with password is {1}</string>
    <string name="forgot_password">Forgot password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_payment">Thanh Toán</string>
    <string name="txt_purchase">Đặt hàng</string>
    <string name="txt_exchange">Đổi điểm</string>
    <string name="txt_location">Vị trí</string>
    <string name="txt_help">Hướng dẫn</string>
    <string name="txt_user_name">Nguyễn Quang Hưng</string>
    <string name="user_phone_number">0949076952</string>
    <string name="txt_coin">Điểm tích lũy</string>
    <string name="txt_my_qr">QR của tôi</string>
    <string name="txt_feedback">Phản ánh</string>
    <string name="txt_mobile_money">Liên kết ví điện tử</string>
    <string name="txt_setting">Cài đặt</string>
    <string name="txt_about_us">Thông tin ứng dụng</string>
    <string name="txt_logout">Đăng xuất</string>
    <string name="description_about_us">
        Chúng tôi là team Big Five, đội ngũ phát triển phần mềm với mong muốn có thể giảm thiểu được rác thải biến. Hãy sử dụng app và cùng chung ta bảo vệ môi trường biển nhé !! \nhttps:\\\\sinno.soict.ai\\bigfive
    </string>
</resources>