<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background_login"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginTop="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/img_seasy" />

        <ImageView
            android:id="@+id/imgSlogan"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:src="@drawable/img_slogan" />

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgSlogan"
            android:background="@drawable/custom_background_login_box"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp">

                <EditText
                    android:id="@+id/editUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edit_text_box"
                    android:hint="@string/user_name"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edit_text_box"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/forgot_password"
                android:onClick="forgotPassword"
                android:textColor="@color/login_text_color"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_button"
                android:drawableRight="@drawable/ic_arrow_right"
                android:onClick="login"
                android:paddingHorizontal="8dp"
                android:text="@string/login"
                android:textColor="@color/white" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="Don't have an account?"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="register"
                android:text="@string/register"
                android:textColor="@color/login_text_color"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>