<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".HomeFragment">

    <RelativeLayout
        android:id="@+id/view_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="3"
        android:background="@drawable/img_cover_top_home">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:padding="16dp"
            android:weightSum="10">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="4"
                android:src="@drawable/img_app_icon" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="6"
                android:src="@drawable/img_slogan" />
        </LinearLayout>

    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/notice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="16dp"
        android:layout_weight="5"
        android:scrollbarThumbHorizontal="@null"
        android:background="#F5F9FB">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="7"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_sea_view" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="left"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:text="24/07/2021"
                        android:textSize="10sp"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="left"
                        android:layout_margin="4dp"
                        android:layout_weight="2"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="Công nhân dọn rác ở bãi biển Đồ Sơn Hải Phòng"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="7"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_sea_view" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="left"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:text="24/07/2021"
                        android:textSize="10sp"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="left"
                        android:layout_margin="4dp"
                        android:layout_weight="2"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="Công nhân dọn rác ở bãi biển Đồ Sơn Hải Phòng"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="7"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_sea_view" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="left"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:text="24/07/2021"
                        android:textSize="10sp"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="left"
                        android:layout_margin="4dp"
                        android:layout_weight="2"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="Công nhân dọn rác ở bãi biển Đồ Sơn Hải Phòng"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="7"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_sea_view" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="left"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:text="24/07/2021"
                        android:textSize="10sp"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="left"
                        android:layout_margin="4dp"
                        android:layout_weight="2"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="Công nhân dọn rác ở bãi biển Đồ Sơn Hải Phòng"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="16dp"
        android:layout_weight="2"
        android:background="#F5F9FB"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="10">

            <ImageButton
                android:id="@+id/btn_pay"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/img_payment" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="4dp"
                android:text="@string/txt_payment"
                android:textColor="@color/black"
                android:textSize="8sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="10">

            <ImageButton
                android:id="@+id/btn_purchase"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/img_purchase" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="4dp"
                android:text="@string/txt_purchase"
                android:textColor="@color/black"
                android:textSize="8sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="10">

            <ImageButton
                android:id="@+id/btn_exchange"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/img_exchange" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="4dp"
                android:text="@string/txt_exchange"
                android:textColor="@color/black"
                android:textSize="8sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="10">

            <ImageButton
                android:id="@+id/btn_location"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/img_loacation" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="4dp"
                android:text="@string/txt_location"
                android:textColor="@color/black"
                android:textSize="8sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="10">

            <ImageButton
                android:id="@+id/btn_help"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/img_help" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="4dp"
                android:text="@string/txt_help"
                android:textColor="@color/black"
                android:textSize="8sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>